--- a/ADRESS/Css/styles.css
+++ b/ADRESS/Css/styles.css
@@ -322,6 +322,15 @@ ul li h2::before {
 .p-20{
     padding: 0 20px;
 }
+
+#mensajeConfirmacion{
+    background-color: #3366CC;
+    color:#fff;
+    text-align: center;
+    padding: 1em;
+    font-weight: bold;
+}
+
 /* Media queries para hacer responsive */
 @media only screen and (max-width: 600px) {
     /* para pantallas pequeñas */
